@@ -8,6 +8,8 @@ Bug fixes:
 ~~~~~~~~~~
 - Fix filename behavior while upgrading file widget content. 
   Was keeping the old extension all the time.
+- #1426: no meta_type attribute in <widget> or <field> tags caused an error in
+         profile import
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
